# palpo

./: UI_TESTING_GUIDE.md  check.md  palpo-example.toml  palpo.toml
.codebuddy/docs/: PROJECT_SUMMARY.md  UI_TEST_PLAN.md  admin-api.md
.codebuddy/plans/: palpo-admin-ui-v2_56bf4c53.md  palpo-admin-ui.md
.kiro/specs/palpo-web-config/: design.md  requirements.md  tasks.md
crates/server/src/: ui_service.rs
crates/ui/: API_MIGRATION_SUMMARY.md  Cargo.toml  Trunk.toml  index.html  style.css
crates/ui/src/: app.rs  lib.rs  main.rs
crates/ui/src/components/: layout.rs  mod.rs
crates/ui/src/pages/: dashboard.rs  login.rs  mod.rs
crates/ui/src/services/: api.rs  auth.rs  mod.rs  users.rs
crates/ui/src/state/: auth.rs  mod.rs
crates/ui/src/types/: mod.rs
